<resources>
    <string name="app_name">Habitualizer</string>
    <string name="facebook_app_id">625413877593110</string>

    <string name="user_name"></string>

    <string name="greeting">Hello</string>
    <string name="greeting2">Let\'s get started.</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_config">Config</string>
    <string name="getstarted">Get Started</string>
    <string name="settings_header">Settings</string>

    <string name="nameSetting_help">What shall we call you?</string>

    <string name="notificationLabel">Questions</string>
    <string name="notificationSetting_low">Daily</string>
    <string name="notificationSetting_medium">Sometimes</string>
    <string name="notificationSetting_high">Frequently</string>
    <string name="notificationSetting_help">We\'ll be asking you questions to gauge your habits. How often do you want to be asked?</string>
    <string name="reset_text">Reset All Data</string>

    <string name="locationLabel">Location</string>
    <string name="locationSetting_off">Off</string>
    <string name="locationSetting_on">On</string>
    <string name="locationSetting_help">We can use your location to determine how your location affects your habits.</string>

    <string name="batteryLabel">Performance</string>
    <string name="batterySetting_low">Power Saver</string>
    <string name="batterySetting_medium">Normal</string>
    <string name="batterySetting_high">High</string>
    <string name="batterySetting_help">How much battery life should we use? Higher battery usage means more accurate statistics.</string>

    <string name="motionLabel">Motion</string>
    <string name="motionSetting_off">Off</string>
    <string name="motionSetting_on">On</string>
    <string name="motionSetting_help">We can use your motion to determine how your physical activity affects your habits.</string>

    <string name="button_configure">Configure your profile</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="error_reset">This will erase all of your data. Are you sure you want to do this?</string>
    <string name="error_yes">Erase</string>
    <string name="error_no">Cancel</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_setup">Setup</string>
    <string name="title_activity_setup_container">setup_container</string>

    <!-- SETTING LABELS -->

    <string name="NAME_SETTING">Name</string>
    <string name="LOCATION_SETTING">Location</string>
    <string name="QUESTIONS_SETTING">Questions</string>
    <string name="MOTION_SETTING">Motion</string>
    <string name="PERFORMANCE_SETTING">Performance</string>
    <string name="SHARED_PREFERENCES">userProfile</string>
    <string name="title_activity_user_profile">UserProfile</string>
    <string name="title_activity_questions">Questions</string>

    <string name="name_setting_title">Your name</string>
    <string name="question_setting_title">Questions</string>
    <string name="title_activity_location">Location</string>
    <string name="location_setting_title">Location</string>
    <string name="motion_setting_title">Motion</string>
    <string name="title_activity_motion">Motion</string>
    <string name="title_activity_performance">Performance</string>
    <string name="battery_setting_title">Performance</string>

    <string name="button_next">Next</string>
    <string name="setup_title">Setup</string>
    <string name="title_activity_debug">Debug</string>

    <string name="debug_text">Debug</string>
    <string name="save">Save</string>
    <string name="title_activity_visualizer">Visualizer</string>
    <string name="title_activity_database">Database</string>
    <string name="title_activity_ask_question">AskQuestion</string>

    <string name="manageQuestions_header">Manage Questions</string>
    <string name="title_activity_question_manager">QuestionManager</string>
</resources>
