<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.laurabarbera.habitualizer.Location">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:orientation="vertical"
        android:id="@+id/settings_layout"
        tools:context="com.example.laurabarbera.habitualizer.Location">

        <TextView android:id="@+id/setup_header"
            android:text="@string/setup_title"
            android:paddingTop="@dimen/header_margin"
            android:paddingBottom="@dimen/header_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:background="@color/header_background"
            android:textColor="@color/header_text2"
            android:layout_width="match_parent"
            android:textSize="16dp"
            android:layout_height="wrap_content" />

        <TextView android:id="@+id/location_setting_header"
            android:text="@string/location_setting_title"
            android:paddingTop="@dimen/header_margin"
            android:paddingBottom="@dimen/header_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:background="@color/header_background"
            android:textColor="@color/header_text"
            android:layout_width="match_parent"
            android:textSize="16dp"
            android:layout_height="wrap_content" />

        <TextView android:tag="@string/LOCATION_SETTING"
            android:id="@+id/locationHelp"
            android:text="@string/locationSetting_help"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/header_margin"
            android:paddingBottom="@dimen/header_margin"
            android:layout_alignParentLeft="true"
            android:textSize="11dp"
            android:textColor="@color/custom_text_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View android:id="@+id/separator"
            android:background="@color/gray_light"
            android:layout_height="1dp"
            android:layout_width="match_parent" />

        <TextView android:id="@+id/locationOn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/header_margin"
            android:paddingBottom="@dimen/header_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/locationSetting_on" />

        <View android:id="@+id/separator2"
            android:layout_below="@id/notificationHelp"
            android:background="@color/gray_light"
            android:layout_height="1dp"
            android:layout_width="match_parent" />

        <TextView android:id="@+id/locationOff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/header_margin"
            android:paddingBottom="@dimen/header_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/locationSetting_off" />

        <View android:id="@+id/separator3"
            android:layout_below="@id/notificationHelp"
            android:background="@color/gray_light"
            android:layout_height="1dp"
            android:layout_width="match_parent" />

        <Button android:id="@+id/save_setting"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/header_margin"
            android:text="Save"
            android:textColor="@color/button_dark_text"
            android:background="@drawable/button_alt" />

        <Button android:id="@+id/cancel_setting"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/divider"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:text="Cancel"
            android:textColor="@color/button_dark_text"
            android:background="@drawable/button_alt" />

    </LinearLayout>

</RelativeLayout>
